tests/t_c_ifdef_scope.d/WINDOWS/control.err
C:\Users\Shawn\Documents\development\hg\sse2\tests\t_c_ifdef_scope.e:12
<0132>:: Syntax error - expected to see possibly 'end', not '('
		foo = foo()
		         ^


--- Defined Words ---
EU4
EU4_0
EU4_0_3
WINDOWS
WIN32
CONSOLE
UNITTEST
CRASH
EUI
FOO
-------------------
